<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="@dimen/margin_12dp"
    android:layout_marginHorizontal="@dimen/margin_6dp"
    android:layout_marginTop="@dimen/margin_6dp"
    app:cardCornerRadius="@dimen/radius_10dp"
    app:cardElevation="@dimen/elevation_8dp"
    android:padding="@dimen/margin_12dp"
    android:backgroundTint="@color/card_bg">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/margin_12dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="@dimen/img_80dp"
            android:layout_height="@dimen/img_80dp"
            android:src="@drawable/ic_launcher_foreground"
            app:civ_border_width="@dimen/img_border_2dp"
            app:civ_border_color="@color/border_dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_12dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/john_doe"
            android:textColor="@color/border_dark"
            android:textSize="@dimen/profileName_24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile_image"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintVertical_bias="0.0"
            android:maxLines="2"
            android:ellipsize="end"/>

        <TextView
            android:id="@+id/userCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/userCity"
            android:layout_marginTop="@dimen/margin_6dp"
            android:textSize="@dimen/text_12sp"
            android:textStyle="bold"
            android:textColor="@color/border_dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile_name" />

        <Button
            android:id="@+id/followBtn"
            style="@style/PillButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_bg"
            app:background="@color/white"
            android:text="@string/follow"
            android:textAllCaps="false"
            android:layout_marginTop="@dimen/margin_12dp"
            android:layout_marginBottom="@dimen/margin_12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/ContactBtn"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/userCity" />

        <Button
            android:id="@+id/ContactBtn"
            style="@style/PillButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_bg"
            android:text="@string/contact"
            android:textAllCaps="false"
            app:background="@color/white"
            android:layout_marginStart="@dimen/margin_6dp"
            android:layout_marginBottom="@dimen/margin_12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/followBtn"
            app:layout_constraintTop_toTopOf="@id/followBtn" />



    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>